# destor

./: .gitignore  Cargo.toml  ChangeLog  ChangeLog.md  Makefile  Makefile.am  Makefile.in  README.md  build.rs  configure  configure.ac
src/: Makefile.in  chunk.rs  lib.rs
src/chunking/: CMakeLists.txt  Makefile.in  ae_chunking.c  ae_chunking.h  ae_chunking_bind.rs  chunking.h  rabin_chunking.c
src/fsl/: Makefile.in  read_fsl_trace.c
src/include/: destor.h
src/index/: Makefile.in  fingerprint_cache.c  index.c  kvstore.h  kvstore_htable.c  sampling_method.c  segmenting_method.c  similarity_detection.c
src/phase/: chunk_phase.c
src/recipe/: Makefile.in  recipestore.c  recipestore.h
src/storage/: Makefile.in  containerstore.c  containerstore.h
src/utils/: Makefile.in  config.c
