[package]
name = "destor"
version = "0.1.0"
authors = ["Julian Zhang <zczxyz@126.com>"]
description = "A Rust implementation of the destor algorithms."
license = "Apache-2.0"
keywords = ["dedupe"]
homepage = "https://github.com/zhangchunzhong/destor"
repository = "https://github.com/zhangchunzhong/destor"
readme = "README.md"
categories = ["dedupe"]
exclude = ["test/*"]

[dependencies]
crc = "1.8.1"
adler32 = "1.1.0"
byteorder = "1.3.4"

[profile.release]
debug = true
